<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context="sh.slst.anroidtv.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:gravity="center"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:text="@string/title"
        android:textColor="@color/yellow"
        android:textSize="@dimen/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:text="@string/man"
                    android:textColor="@color/red"
                    android:textSize="@dimen/title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unused"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/tv_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text" />
            </LinearLayout>

            <ViewFlipper
                android:id="@+id/vf_man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoStart="true"
                android:flipInterval="10000"
                android:inAnimation="@anim/anim_in"
                android:outAnimation="@anim/anim_out" />
        </LinearLayout>

        <TextView
            android:layout_width="@dimen/spacing_half"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:text="@string/woman"
                    android:textColor="@color/red"
                    android:textSize="@dimen/title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unused"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text" />

                <TextView
                    android:id="@+id/tv_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text" />
            </LinearLayout>

            <ViewFlipper
                android:id="@+id/vf_woman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoStart="true"
                android:flipInterval="10000"
                android:inAnimation="@anim/anim_in"
                android:outAnimation="@anim/anim_out" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--年月日 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />
        </LinearLayout>
        <!--星期、时分-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />
        </LinearLayout>
        <!--入侧累计人数-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people_counting"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/tv_people_counting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="107"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--温度-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15℃-20℃"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />
        </LinearLayout>
        <!--风力-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2、3级"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />

        </LinearLayout>
        <!--湿度-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/white"
                android:textSize="@dimen/text" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18RH%"
                android:textColor="@color/red"
                android:textSize="@dimen/text" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:paddingTop="@dimen/padding"
        android:paddingBottom="@dimen/padding"
        android:text="@string/tip"
        android:textColor="@color/white"
        android:textSize="@dimen/title" />
</LinearLayout>